[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ttf/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/png/Menu.png" type="Texture" id=3]
[ext_resource path="res://scripts/Lobby.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mutliplayer_config" type="VBoxContainer" parent="."]
margin_left = 185.0
margin_right = 839.0
margin_bottom = 430.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="mutliplayer_config"]
margin_right = 654.0
margin_bottom = 84.0
custom_colors/font_color = Color( 0.85098, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Select or Create Server"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="interactables" type="VBoxContainer" parent="mutliplayer_config"]
margin_top = 144.0
margin_right = 654.0
margin_bottom = 430.0
custom_constants/separation = 30

[node name="server_IP" type="LineEdit" parent="mutliplayer_config/interactables"]
margin_right = 654.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0.85098, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
placeholder_text = "IP ADDRESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_Server" type="Button" parent="mutliplayer_config/interactables"]
margin_left = 246.0
margin_top = 82.0
margin_right = 408.0
margin_bottom = 130.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "JOIN SERVER"

[node name="Create_Server" type="Button" parent="mutliplayer_config/interactables"]
margin_left = 225.0
margin_top = 160.0
margin_right = 429.0
margin_bottom = 208.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "CREATE SERVER"

[node name="Back" type="Button" parent="mutliplayer_config/interactables"]
margin_left = 291.0
margin_top = 238.0
margin_right = 363.0
margin_bottom = 286.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "BACK"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="device_IP" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -46.0
margin_right = 512.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "IP ADDRESS: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="mutliplayer_config/interactables/Join_Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="mutliplayer_config/interactables/Create_Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="mutliplayer_config/interactables/Back" to="." method="_on_Back_pressed"]
